Coursework : Implemented movie and city service.